--- a/estiloAPD.css
+++ b/estiloAPD.css
@@ -46,9 +46,9 @@ ul#lista-practicas li {
     display: block;
 }
 .boton-retroceder {
-    background-image: url('flecha.png'); /* Reemplaza 'ruta/de/la/imagen.jpg' con la ruta correcta de tu imagen */
-    background-size: auto 100%; /* La imagen se ajustará en altura y mantendrá la proporción de la anchura */
-    background-position: left center; /* Coloca la imagen a la izquierda */
+    background-image: url('flecha.png');
+    background-size: auto 100%; 
+    background-position: left center; 
     background-repeat: no-repeat;
     border-radius: 50px;
     padding: 24px 24px;
@@ -150,7 +150,7 @@ ul#lista-practicas li {
     font-family: 'calibri';
     color: white;
     box-shadow: 7px 13px 37px #000;
-    margin-left: 50px; /* Ajusta este valor según sea necesario */
+    margin-left: 50px; 
 }
 
   
