--- a/estiloE.css
+++ b/estiloE.css
@@ -81,7 +81,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin-left: 80px; /* Ajusta este valor para mover las cartas hacia la derecha */
+    margin-left: 80px; 
    
   }
   
@@ -90,11 +90,11 @@ body {
     width: 350px;
     height: 350px;
     border: 1px solid #f1f1f1;
-    perspective: 1000px; /* Remove this if you don't want the 3D effect */
-    margin: 10px; /* Agregamos un margen de 10px */
+    perspective: 1000px; 
+    margin: 10px; 
   }
   
-  /* This container is needed to position the front and back side */
+
   .flip-card-inner {
     position: relative;
     width: 100%;
@@ -104,28 +104,28 @@ body {
     transform-style: preserve-3d;
   }
   
-  /* Do an horizontal flip when you move the mouse over the flip box container */
+  
   .flip-card:hover .flip-card-inner {
     transform: rotateY(180deg);
   }
   
-  /* Position the front and back side */
+  
   .flip-card-front,
   .flip-card-back {
     position: absolute;
     width: 100%;
     height: 100%;
-    -webkit-backface-visibility: hidden; /* Safari */
+    -webkit-backface-visibility: hidden; 
     backface-visibility: hidden;
   }
   
-  /* Style the front side (fallback if image is missing) */
+  
   .flip-card-front {
     background-color: #9c2929c2;
     color: black;
   }
   
-  /* Style the back side */
+  
   .flip-card-back {
     background-color: dodgerblue;
     color: white;
